# fortran-datetime

./: .gitignore  CMakeLists.txt  README.md  makefile  tags
apps/: CMakeLists.txt  main.f90
bak/: README_2024-09-26_1042.md  README_2024-09-26_1046.md  README_2024-09-26_1047.md
src/: dt_mo.f90
src/bak/: dt_mo_2024-09-26_1043.f90  dt_mo_2024-09-26_1148.f90  dt_mo_2024-09-26_1231.f90  dt_mo_2024-09-26_1233.f90  dt_mo_2024-09-26_1234.f90  dt_mo_2024-09-26_1235.f90  dt_mo_2024-10-02_1731.f90  dt_mo_2024-10-02_1732.f90  dt_mo_2024-10-02_1733.f90  dt_mo_2024-10-02_1740.f90  dt_mo_2024-10-02_1743.f90  dt_mo_2024-10-02_1744.f90
test/: CMakeLists.txt  unit_test.f90  unit_test1.f90
test/bak/: CMakeLists_2024-09-26_1142.txt  CMakeLists_2024-09-26_1229.txt  CMakeLists_2024-10-06_1007.txt  CMakeLists_2024-10-06_1008.txt  unit_test1_2024-09-26_1142.f90  unit_test1_2024-09-26_1154.f90  unit_test1_2024-09-26_1156.f90
tests/: CMakeLists.txt  makefile  test.f90
tests/bak/: CMakeLists_2024-09-26_1144.txt  CMakeLists_2024-09-26_1149.txt  unit_test1_2024-09-26_1155.f90
